Fix stacking of columns on small screens

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -6,6 +6,24 @@
     max-height: 30px;
   }
 
+  .columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+  }
+
+  .column {
+    flex: 0 1;
+    min-width: 300px;
+    margin: 10px;
+    max-width: 100%;
+
+  }
+
+
  }
 
 
@@ -19,12 +37,9 @@
 
 }
 
-@media (min-width: 992px) {
-  .navbar-nav.navbar-nav-scroll {
-    --bs-scroll-height: 100vh;
-  }
-
-
+.navbar-nav.navbar-nav-scroll {
+  --bs-scroll-height: 100vh;
+}
 
 .quarto-title-banner h1, .quarto-title-banner .h1, .quarto-title-banner h2, .quarto-title-banner .h2 {
     color: #fff;
